--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -109,7 +109,7 @@ vertexSignal(pspace1)
 
 Following that, we will use the `circularProjection()` function to project the network signals, using the `weibullDecay()` function with default settings. We set `knn = 1`, defining the contributing vertices for signal convolution. In this case, each *null-signal position* will receive the projection from a single *vertex-signal position* (*i.e.* from the nearest signal source in the pathway space). We then create a landscape image using the `plotPathwaySpace()` function.
 
-```{r Circular projection - 1, eval=TRUE, message=FALSE, out.width="50%"}
+```{r Circular projection - 1, eval=FALSE, message=FALSE, out.width="50%"}
 # Run network signal projection
 pspace1 <- circularProjection(pspace1, knn = 1, pdist = 0.4)
 
@@ -117,9 +117,19 @@ pspace1 <- circularProjection(pspace1, knn = 1, pdist = 0.4)
 plotPathwaySpace(pspace1, marks = TRUE)
 ```
 
+```{r fig2.png, eval=FALSE, message=FALSE, echo=FALSE}
+gg <- plotPathwaySpace(pspace1, marks = TRUE)
+ggsave(filename = "./figures/fig2.png", height=5, width=5, 
+  units="in", device="png", dpi=350, plot=gg)
+```
+
+```{r fig2, echo=FALSE, out.width = '80%'}
+knitr::include_graphics("figures/fig2.png")
+```
+
 The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance will affect the extent over which the convolution operation projects the signal in the pathway space. Next, we reassess the same *PathwaySpace* object using `knn = 2`. The user can also customize a few arguments in `plotPathwaySpace()` function, which is a wrapper to create dedicated *ggplot* graphics for *PathwaySpace-class* objects. 
 
-```{r Circular projection - 2, eval=TRUE, message=FALSE, out.width="50%"}
+```{r Circular projection - 2, eval=FALSE, message=FALSE, out.width="50%"}
 # Re-run the network signal projection with 'knn = 2'
 pspace1 <- circularProjection(pspace1, knn = 2, pdist = 0.4)
 
@@ -127,14 +137,34 @@ pspace1 <- circularProjection(pspace1, knn = 2, pdist = 0.4)
 plotPathwaySpace(pspace1, marks = c("n3","n4"), theme = "th2")
 ```
 
+```{r fig3.png, eval=FALSE, message=FALSE, echo=FALSE}
+gg <- plotPathwaySpace(pspace1, marks = c("n3","n4"))
+ggsave(filename = "./figures/fig3.png", height=5, width=5, 
+  units="in", device="png", dpi=350, plot=gg)
+```
+
+```{r fig3, echo=FALSE, out.width = '80%'}
+knitr::include_graphics("figures/fig3.png")
+```
+
 The decay function used in the signal projection was passed to the `circularProjection()` function by the `decay_fun` argument. The user can pass additional arguments to the decay function using the `...` argument, for example:
 
-```{r Circular projection - 3, eval=TRUE, message=FALSE, out.width="50%"}
+```{r Circular projection - 3, eval=FALSE, message=FALSE, out.width="50%"}
 # Re-run the network signal projection, passing 'shape' to the decay function
 pspace1 <- circularProjection(pspace1, knn = 2, pdist = 0.2, shape = 2)
 
 # Plot the PathwaySpace image
-plotPathwaySpace(pspace1, marks = TRUE, theme = "th2")
+plotPathwaySpace(pspace1, marks = "n1", theme = "th2")
+```
+
+```{r fig4.png, eval=FALSE, message=FALSE, echo=FALSE}
+gg <- plotPathwaySpace(pspace1, marks = "n1", theme = "th2")
+ggsave(filename = "./figures/fig4.png", height=5, width=5, 
+  units="in", device="png", dpi=350, plot=gg)
+```
+
+```{r fig4, echo=FALSE, out.width = '80%'}
+knitr::include_graphics("figures/fig4.png")
 ```
 
 In this case, we set the `shape` of a 3-parameter Weibull function. This parameter allows a projection to take a variety of shapes. When `shape = 1` the Weibull decay follows an exponential decay, and when `shape > 1` the projection is first convex, then concave with an inflexion point along the decay path.
@@ -143,7 +173,7 @@ In this case, we set the `shape` of a 3-parameter Weibull function. This paramet
 
 The *PathwaySpace* accepts binary, integer, and numeric signal types, including `NAs`. When a vertex is assigned with `NA`, it will be excluded from the signal projection, not evaluated by the convolution algorithm. Logical values are also allowed, but it will be treated as binary. Next, we show the projection of a signal that includes negative values.
 
-```{r Signal types, eval=TRUE, message=FALSE, out.width="50%"}
+```{r Signal types, eval=FALSE, message=FALSE, out.width="50%"}
 # Set a negative signal to vertices "n3" and "n4"
 vertexSignal(pspace1)[c("n3","n4")] <- c(-2, -4)
 
@@ -152,6 +182,17 @@ pspace1 <- circularProjection(pspace1, knn = 2, shape = 2)
 
 # Plot the PathwaySpace image
 plotPathwaySpace(pspace1, bg.color = "white", font.color = "grey20")
+```
+
+```{r fig5.png, eval=FALSE, message=FALSE, echo=FALSE}
+gg <- plotPathwaySpace(pspace1, marks = c("n1","n3","n4","n5"), 
+  bg.color = "white", font.color = "grey20", theme = "th2")
+ggsave(filename = "./figures/fig5.png", height=5, width=5, 
+  units="in", device="png", dpi=350, plot=gg)
+```
+
+```{r fig5, echo=FALSE, out.width = '80%'}
+knitr::include_graphics("figures/fig5.png")
 ```
 
 Note that the density scale is represented in `[-1, +1]`. If the signal vector is `>=0`, then it will be rescaled to `[0, 1]`; if the signal vector is `<=0`, it will be rescaled to `[-1, 0]`; and if the signal vector is in `(-Inf, +Inf)`, then it will be rescaled to `[-1, +1]`. To override this signal processing in the `circularProjection()` function, simply set the `rescale` argument to `FALSE`.
@@ -176,7 +217,7 @@ pspace2 <- buildPathwaySpace(gtoy2, mar = 0.2)
 vertexSignal(pspace2) <- 1
 ```
 
-```{r Polar projection - 3, eval=TRUE, message=FALSE, out.width="50%"}
+```{r Polar projection - 3, eval=FALSE, message=FALSE, out.width="50%"}
 # Run the network signal projection using polar coordinates
 pspace2 <- polarProjection(pspace2, knn = 2, theta = 45, shape = 2)
 
@@ -184,7 +225,17 @@ pspace2 <- polarProjection(pspace2, knn = 2, theta = 45, shape = 2)
 plotPathwaySpace(pspace2, theme = "th2", marks = TRUE)
 ```
 
-```{r Polar projection - 4, eval=TRUE, message=FALSE, out.width="50%"}
+```{r fig6.png, eval=FALSE, message=FALSE, echo=FALSE}
+gg <- plotPathwaySpace(pspace2, theme = "th2", marks = TRUE)
+ggsave(filename = "./figures/fig6.png", height=5, width=5, 
+  units="in", device="png", dpi=350, plot=gg)
+```
+
+```{r fig6, echo=FALSE, out.width = '80%'}
+knitr::include_graphics("figures/fig6.png")
+```
+
+```{r Polar projection - 4, eval=FALSE, message=FALSE, out.width="50%"}
 # Re-run the network signal projection using 'directional = TRUE'
 pspace2 <- polarProjection(pspace2, knn = 2, theta = 45, shape = 2, 
   directional = TRUE)
@@ -192,6 +243,17 @@ pspace2 <- polarProjection(pspace2, knn = 2, theta = 45, shape = 2,
 # Plot the PathwaySpace image
 plotPathwaySpace(pspace2, theme = "th2", marks = c("n1","n3","n4","n5"))
 ```
+
+```{r fig7.png, eval=FALSE, message=FALSE, echo=FALSE}
+gg <- plotPathwaySpace(pspace2, theme = "th2", marks = TRUE)
+ggsave(filename = "./figures/fig7.png", height=5, width=5, 
+  units="in", device="png", dpi=350, plot=gg)
+```
+
+```{r fig7, echo=FALSE, out.width = '80%'}
+knitr::include_graphics("figures/fig7.png")
+```
+
 
 # Case study
 
