--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -59,3 +59,19 @@ isbn="978-3-319-64110-2",
 doi="10.1007/978-3-319-64110-2_10",
 url="https://doi.org/10.1007/978-3-319-64110-2_10"
 }
+
+@article{Rodchenkov2019,
+author = {Rodchenkov, Igor and Babur, Ozgun and Luna, Augustin and Aksoy, Bulent Arman and Wong, Jeffrey V and Fong, Dylan and Franz, Max and Siper, Metin Can and Cheung, Manfred and Wrana, Michael and Mistry, Harsh and Mosier, Logan and Dlin, Jonah and Wen, Qizhi and O’Callaghan, Caitlin and Li, Wanxin and Elder, Geoffrey and Smith, Peter T and Dallago, Christian and Cerami, Ethan and Gross, Benjamin and Dogrusoz, Ugur and Demir, Emek and Bader, Gary D and Sander, Chris},
+title = "{Pathway Commons 2019 Update: integration, analysis and exploration of pathway data}",
+journal = {Nucleic Acids Research},
+volume = {48},
+number = {D1},
+pages = {D489-D497},
+year = {2019},
+month = {10},
+issn = {0305-1048},
+doi = {10.1093/nar/gkz946},
+url = {https://doi.org/10.1093/nar/gkz946},
+eprint = {https://academic.oup.com/nar/article-pdf/48/D1/D489/31697764/gkz946.pdf},
+}
+
