--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -11,6 +11,18 @@ number = {4},
 doi = {10.1186/gb-2012-13-4-r29}
 }
 
+
+@Article{Liberzon2015,
+author = {Arthur Liberzon and Chet Birger and Helga Thorvaldsdottir and Mahmoud Ghandi and Jill Mesirov and Pablo Tamayo},
+title = {The Molecular Signatures Database (MSigDB) hallmark gene set collection.},
+journal = {Cell Systems},
+year = {2015},
+volume = {1},
+pages = {417--425},
+number = {5},
+doi = {10.1016/j.cels.2015.12.004}
+}
+
 @Article{igraph,
 title = {The igraph software package for complex network research},
 author = {Gabor Csardi and Tamas Nepusz},
